# gr-final

./: .gitignore  CLAUDE (1).md  GR_Connect_Technical_Documentation.md  GR_Rating_Implementation_Spec (1).docx  IMPLEMENTATION_PLAN.md  README.md  cloudbuild.yaml
.claude/: settings.local.json
gr-connect/: .gitignore  Dockerfile  firestore.indexes.json  next.config.ts  package-lock.json  package.json  storage.rules  tsconfig.tsbuildinfo
gr-connect/public/: manifest.json
gr-connect/src/app/: globals.css  page.tsx  (+1 more)
gr-rating/: Dockerfile  alembic.ini  cleanup_extra_researchers.py  docker-compose.yml  enrich_researchers.py  fix_affiliations.py  fix_openalex_ids.py  pyproject.toml  recalculate_gr.py  seed_prod.py  startup.sh
gr-rating/alembic/: env.py
gr-rating/alembic/versions/: 79803942b7ff_initial_tables.py  8ee97c31e90d_widen_id_columns.py  add_researcher_enrichment_fields.py  e8b86b42a436_widen_google_scholar_id.py
gr-rating/app/: cache.py  config.py  database.py  main.py  search.py
gr-rating/app/api/v1/: claim.py  discover.py  meetings.py  researchers.py
gr-rating/app/ingestion/: crossref_events.py  fwci.py  metrics.py  openalex.py
gr-rating/app/models/: __init__.py  gr_rating.py  raw_metrics.py  researcher.py
gr-rating/app/schemas/: rating.py
gr-rating/app/scoring/: composite.py  pillar1.py  pillar2.py  pillar3.py  pillar4.py  pillar5.py  saturation.py
gr-rating/app/workers/: celery_app.py  compute_scores.py
gr-rating/scripts/: enrich_researchers.py  import_researchers.py  seed_researchers.py
gr-rating/tests/test_scoring/: test_all_scoring.py
(+33 files in other folders)
